Add post content API endpoints (#82)
